# qml-component-bug-minimal

./: CMakeLists.txt  Test.qml  main.cpp
